# nohuman

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cog.toml  config.toml  justfile  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  docker.yaml  release-please.yaml  release.yaml
install/: install.sh
src/: compression.rs  download.rs  lib.rs  main.rs
