[package]
name = "nohuman"
description = "Remove human reads from a sequencing run"
version = "0.1.1"
edition = "2021"
authors = ["Michael Hall <michael@mbh.sh>"]
repository = "https://github.com/mbhall88/nohuman"
homepage = "https://github.com/mbhall88/nohuman"
readme = "README.md"
license-file = "LICENSE"
rust-version = "1.70.0"
keywords = ["bioinformatics", "contamination", "metagenomics"]
categories = ["science", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
log = "0.4.20"
env_logger = "0.11.3"
anyhow = "1.0.75"
flate2 = "1.0.28"
reqwest = { version = "0.12.5", features = ["blocking", "stream"] }
tar = "0.4.40"
thiserror = "1.0.50"
tempfile = "3.8.1"
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }
md5 = "0.7.0"
lazy_static = "1.4.0"
dirs = "5.0.1"
futures-util = "0.3.29"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
indicatif = "0.17.7"
gzp = "0.11.3"
niffler = "2.6.0"
rayon = "1.10.0"
