[package]
name = "nohuman"
description = "Remove human reads from a sequencing run"
version = "0.5.0"
edition = "2021"
authors = ["Michael Hall <michael@mbh.sh>"]
repository = "https://github.com/mbhall88/nohuman"
homepage = "https://github.com/mbhall88/nohuman"
readme = "README.md"
license-file = "LICENSE"
rust-version = "1.80.0"
keywords = ["bioinformatics", "contamination", "metagenomics"]
categories = ["science", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "4.5.18", features = ["derive", "env"] }
log = "0.4.22"
env_logger = "0.11.5"
anyhow = "1.0.89"
flate2 = "1.0.33"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "stream", "rustls-tls"] }
tar = "0.4.41"
thiserror = "2.0.17"
tempfile = "3.12.0"
toml = "1.0.2"
serde = { version = "1.0.210", features = ["derive"] }
md5 = "0.8.0"
dirs = "6.0.0"
futures-util = "0.3.30"
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
indicatif = "0.18.3"
bzip2 = "0.6.1"
zstd = { version = "0.13.2", features = ["zstdmt"] }
liblzma = { version = "0.4.5", features = ["parallel"] }
gzp = { version = "0.11.3", default-features = false, features = ["deflate_rust"] }
jiff = "0.2.3"
